﻿[B]1.0.6[/B]
- Keresés esetén kategória választási lehetőség

[B]1.0.5[/B]
- Keresési előzmények tárolása

[B]1.0.4[/B]
- Dekódolás megoldása

[B]1.0.3[/B]
- Python 2 függőség eltávolítása

[B]1.0.2[/B]
- Videók keresése * segítségével

[B]1.0.1[/B]
- Következő oldal link javítása

[B]1.0.0[/B]
- Első verzió